<resources>
	<string name="app_name">MC App 1</string>
	<string name="registration_form">Registration Form</string>
	<string name="full_name">Full Name</string>
	<string name="roll_number">Roll Number</string>
	<string name="branch">Branch</string>
	<string name="first_course">First Course</string>
	<string name="second_course">Second Course</string>
	<string name="third_course">Third Course</string>
	<string name="fourth_course">Fourth Course</string>
	<string name="full_name_colon">Full Name:</string>
	<string name="roll_number_colon">Roll Number:</string>
	<string name="branch_colon">Branch:</string>
	<string name="first_course_colon">First Course:</string>
	<string name="second_course_colon">Second Course:</string>
	<string name="third_course_colon">Third Course:</string>
	<string name="fourth_course_colon">Fourth Course:</string>

	<string name="submit">Submit</string>
	<string name="clear">Clear</string>
	<string name="registration_details">Registration Details</string>
	<string name="on_create">onCreate</string>
	<string name="on_start">onStart</string>
	<string name="on_resume">onResume</string>
	<string name="on_pause">onPause</string>
	<string name="on_stop">onStop</string>
	<string name="on_destroy">onDestroy</string>
	<string name="on_restart">onRestart</string>
	<string name="activity_launched">Activity Launched</string>
	<string name="all_fields_are_mandatory">All fields are mandatory.</string>

</resources>
