<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".details.DetailsActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/value_20dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/full_name_colon"/>

			<TextView
				android:id="@+id/tv_full_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/roll_number_colon"/>

			<TextView
				android:id="@+id/tv_rollnumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/branch_colon"/>

			<TextView
				android:id="@+id/tv_branch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/first_course_colon"/>

			<TextView
				android:id="@+id/tv_course_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/second_course_colon"/>

			<TextView
				android:id="@+id/tv_course_2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/third_course_colon"/>

			<TextView
				android:id="@+id/tv_course_3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/value_10dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/value_10dp"
				android:text="@string/fourth_course_colon"/>

			<TextView
				android:id="@+id/tv_course_4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"/>

		</LinearLayout>


	</LinearLayout>

</ScrollView>